<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">calculator</string>

    <string name="number_preview">0</string>
    <string name="number_clean">C</string>
    <string name="number_delete">DEL</string>
    <string name="number_plus">+</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_subtract">-</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_multiply">*</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_divid">/</string>
    <string name="number_dot">.</string>
    <string name="number_zero">0</string>
    <string name="number_equal">=</string>
</resources>

