<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LineLayout1"
    android:layout_width="match_parent"
    android:layout_height="620sp"
    android:orientation="vertical"
    android:background="@color/colorDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:background="@color/colorDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="@color/colorDark7"
            >

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@color/colorDark7"
            android:orientation="horizontal"
            >
        <EditText
            android:id="@+id/numberPreviewL1"
            android:layout_width="335sp"
            android:layout_height="50sp"
            android:background="@color/colorDark7"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="right|bottom"
            android:maxLines="1"
            android:inputType="text"
            android:editable="false"
            android:longClickable="false"
            android:text="@null"
            android:textColor="@color/colorWrite"
            android:visibility="visible"
            android:maxLength="16"
            tools:ignore="Deprecated"/>
            <LinearLayout
                android:layout_width="25sp"
                android:layout_height="50sp"
                android:background="@color/colorDark7">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@color/colorDark7"
            android:orientation="horizontal"
            >
        <EditText
            android:id="@+id/numberPreviewL2"
            android:layout_width="335sp"
            android:layout_height="50sp"
            android:background="@color/colorDark7"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="right|bottom"
            android:maxLines="1"
            android:inputType="text"
            android:editable="false"
            android:longClickable="false"
            android:text="@null"
            android:textColor="@color/colorWrite"
            android:visibility="visible"
            android:maxLength="16"
            tools:ignore="Deprecated"/>
            <LinearLayout
                android:layout_width="25sp"
                android:layout_height="50sp"
                android:background="@color/colorDark7">

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:background="@color/colorDark7"
            android:orientation="horizontal"
            >
        <EditText
            android:id="@+id/numberPreview"
            android:layout_width="335sp"
            android:layout_height="90sp"
            android:background="@color/colorDark7"
            android:textStyle="bold"
            android:textSize="65sp"
            android:gravity="right|bottom"
            android:maxLines="1"

            android:inputType="text"
            android:editable="false"
            android:longClickable="false"
            android:text="@null"
            android:textColor="@color/colorWrite"
            android:visibility="visible"
            android:maxLength="8"
            tools:ignore="Deprecated" />
            <LinearLayout
                android:layout_width="25sp"
                android:layout_height="90sp"
                android:background="@color/colorDark7">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:background="@color/colorDark7"
            android:gravity="right|bottom"
            tools:ignore="SmallSp">

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:orientation="horizontal"
        android:background="@drawable/dark_background"
        >
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/clean"
            android:layout_width="140sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/number_clean"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@drawable/radiu_botton2"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/delete"
            android:layout_width="140sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/number_delete"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@drawable/radiu_botton2"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:orientation="horizontal"
        android:background="@drawable/dark_background"
        >
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/Divid"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="0dp"
            android:text="@string/number_divid"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@drawable/radiu_button"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/numberSeven"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/number_seven"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/numberEight"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/number_eight"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/numberNine"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/number_nine"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:orientation="horizontal"
        android:background="@drawable/dark_background"
        >
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/Multiply"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="0dp"
            android:text="@string/number_multiply"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@drawable/radiu_button"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/numberFour"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/number_four"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/numberFive"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/number_five"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/numberSix"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/number_six"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:orientation="horizontal"
        android:background="@drawable/dark_background"
        >
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/Subtract"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="0dp"
            android:text="@string/number_subtract"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@drawable/radiu_button"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/numberOne"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/number_one"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/numberTwo"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/number_two"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/numberThree"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/number_three"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:orientation="horizontal"
        android:background="@drawable/dark_background"
        >
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/Plus"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="0dp"
            android:text="@string/number_plus"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@drawable/radiu_button"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/Dot"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/number_dot"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/numberZero"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/number_zero"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/Equal"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:padding="0dp"
            android:text="@string/number_equal"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorWrite"
            android:background="@null"
            />
    </LinearLayout>
    
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="10sp"
        android:orientation="horizontal"
        android:background="@drawable/dark_background"

        tools:ignore="SmallSp">

    </LinearLayout>



</LinearLayout>





